<resources>
    <string name="app_name">Android Assignment</string>
    <string name="unexpected_error">Unexpected Error</string>
    <string name="sort_by">Order by</string>
    <string name="order_by_date">Reorder by date</string>
    <string name="order_by_title">Reorder by title</string>
    <string name="our_universe">Our universe</string>
    <string name="reorder_list">Reorder list</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="no_network_connection">No network connection</string>
    <string name="please_check_your_network_connection_and_try_again">Please check your network connection and try again</string>
    <string name="network_settings">Network settings</string>
    <string name="oops_something_went_wrong">Oops something went wrong.</string>
    <string name="please_refresh_the_page_and_try_again">Please refresh the page and try again.</string>
    <string name="refresh">Refresh</string>
    <string name="favourites">Favourites</string>
    <string name="latest">Latest</string>
</resources>
