<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_vector"
            android:layout_marginBottom="@dimen/margin_50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:layout_marginTop="@dimen/margin_50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_size_large"
            android:text="@string/oops_something_went_wrong"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/text_size_large"
            android:layout_margin="@dimen/margin_16dp"
            app:layout_constrainedWidth="true"
            android:gravity="center"
            android:text="@string/please_refresh_the_page_and_try_again"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/message"
            android:gravity="center"
            android:background="@drawable/bg_button"
            android:text="@string/refresh"
            android:padding="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginStart="@dimen/margin_25dp"
            android:layout_marginEnd="@dimen/margin_25dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>